# aimm-mcp

./: .gitignore  CHANGELOG.md  LOCAL_INSTALL.md  README.md  SCHEMA.md  pyproject.toml
.github/workflows/: ci.yml
aimm_mcp/: __init__.py  __main__.py  format_context.py  paths.py  repo.py  schemas.py  server.py  session.py  state.py
aimm_mcp/catalog/: browser.py
aimm_mcp/diagnostics/: log.py
aimm_mcp/discover/: scan.py  store.py
aimm_mcp/mermaid/: builders.py
aimm_mcp/odbc/: dsn.py  engines.py  runner.py
aimm_mcp/parse/: diff.py  joins.py
aimm_mcp/tools/: __init__.py  _common.py  connections.py  diagnostics.py  diagrams.py  joins.py  pending.py  project.py  semantic.py  session.py  tables.py
skills/aimm-scaffold/: SKILL.md
tests/: test_diagnostics.py  test_diff.py  test_discover.py  test_engines.py  test_format_context.py  test_mermaid_builders.py  test_paths.py  test_repo.py  test_semantic.py  test_session.py  test_state.py
