[project]
name = "aimm-mcp"
version = "0.1.0"
description = "Local MCP server for AI Model Manager — captures SQL data-model metadata under ~/Documents/AIMM and exposes it to Claude / any MCP client."
authors = [
    { name = "Dylan Brown", email = "dylancodybrown@gmail.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

# Hard runtime deps. pyodbc has wheels for every major platform so
# `uvx aimm-mcp` doesn't need a compiler on the user's box. sqlglot
# is pure-Python. mcp is Anthropic's reference SDK.
dependencies = [
    "mcp>=1.2.0",
    "pyodbc>=5.1.0",
    "sqlglot>=26.0.0",
    "pydantic>=2.7.0",
]

# uvx / pipx / pip discover this; `uvx aimm-mcp` becomes the launch
# command Claude Code registers with `claude mcp add`.
[project.scripts]
aimm-mcp = "aimm_mcp.__main__:main"

[dependency-groups]
# uv-style dev group; installed by `uv sync --dev`. Optional
# dependencies (PEP 621) would also work but uv's default install
# semantics treat dependency-groups more ergonomically for this case.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aimm_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
